fix swagger, +create list test users

--- a/configs/.env
+++ b/configs/.env
@@ -26,3 +26,10 @@ DB_NAME=authservice
 LOGSDIR=logs/ # папка с логами
 APILOGFILENAME=api_fiolib.log # название файла с логами для api
 DBLOGFILENAME=db_fiolib.log # название файла с файла с логами обращений к бд
+
+# SMTP
+
+EMAIL_FROM="test@test.com"
+EMAIL_PASS="test"
+SMTPHOST="smtp.example.com"
+SMTPPORT="587"
