--- a/configs/.env
+++ b/configs/.env
@@ -25,7 +25,7 @@ DB_NAME=authservice
 
 LOGSDIR=logs/ # папка с логами
 APILOGFILENAME=api_fiolib.log # название файла с логами для api
-DBLOGFILENAME=db_fiolib.log # название файла с файла с логами обращений к бд
+DBLOGFILENAME=db_fiolib.log # название файла с логами обращений к бд
 
 # SMTP
 
