+redis +wbhook env

--- a/configs/.env
+++ b/configs/.env
@@ -21,6 +21,13 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=authservice
 
+# Redis
+
+REDIS_HOST=0.0.0.0
+REDIS_PORT=6379
+REDIS_NAME=authservice
+REDIS_PASS=delorency
+
 # Loggers
 
 LOGSDIR=logs/ # папка с логами
@@ -33,3 +40,6 @@ EMAIL_FROM="test@test.com"
 EMAIL_PASS="test"
 SMTPHOST="smtp.example.com"
 SMTPPORT="587"
+
+# Webhook
+WEBHOOKURL=0.0.0.0
