--- a/configs/.env
+++ b/configs/.env
@@ -25,8 +25,9 @@ DB_NAME=authservice
 
 REDIS_HOST=0.0.0.0
 REDIS_PORT=6379
-REDIS_NAME=authservice
+REDIS_USERNAME=delorency 
 REDIS_PASS=delorency
+REDIS_DB=1
 
 # Loggers
 
