fix, fix readme

--- a/configs/.env
+++ b/configs/.env
@@ -25,9 +25,9 @@ DB_NAME=authservice
 
 REDIS_HOST=0.0.0.0
 REDIS_PORT=6379
-REDIS_USERNAME=delorency 
-REDIS_PASS=delorency
-REDIS_DB=1
+REDIS_USERNAME=default
+REDIS_PASS=default
+REDIS_DB=2
 
 # Loggers
 
