--- a/configs/.env
+++ b/configs/.env
@@ -3,7 +3,7 @@
 TYP=JWT
 ALG=SHA512
 ISS="JWT auth service"
-ACCESS_TOKEN_LIFETIME=120h # 5 дней = 5 * 24
+ACCESS_TOKEN_LIFETIME=120h # 5 дней = 5 * 24 (h - часы, m - минуты, секунды - просто число)
 REFRESH_TOKEN_LIFETIME=720h # 30 дней = 30 * 24
 
 SECRET_KEY="not secret key"
