--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: ${DB_ROLE} 
       POSTGRES_PASSWORD: ${DB_PASS} 
     ports:
-      - "${DOCKER_HOST_DB_PORT}:${DB_PORT}"
+      - "${DOCKER_HOST_DB_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -17,7 +17,7 @@ services:
     restart: always
     container_name: redis
     ports:
-      - "${DOCKER_HOST_REDIS_PORT}:${REDIS_PORT}"
+      - "${DOCKER_HOST_REDIS_PORT}:6379"
 
   app:
     build: .
